backbone-services/apirevproxy.yaml
---
# Source: apirevproxy/templates/service.yaml
# service.yaml---
apiVersion: v1
kind: Service
metadata:
  name: apirevproxy
  namespace: middleware  
  annotations: 
  labels:
    app: apirevproxy   
spec:
  selector:
    app: apirevproxy    
  ports:
  - name: http
    port: 80
    targetPort: 80
---
# Source: apirevproxy/templates/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apirevproxy
  namespace: middleware
  labels:
    app: apirevproxy   
spec:
  selector:
    matchLabels:
      app: apirevproxy
  strategy:
    rollingUpdate:
      maxUnavailable: 0     
  replicas: 1
  template:
    metadata:  
      annotations:
        deployment-timestamp: "20220124144507"        
      labels:
        app: apirevproxy            
    spec:          
      containers:    
        - name: apirevproxy
          image: chub.cloud.gov.in/service-cloud/apirevproxy:latest
          imagePullPolicy: IfNotPresent             
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: apirevproxy
              mountPath:  /etc/nginx/conf.d/
                         
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            
      volumes:
        - name: apirevproxy
          configMap: 
            name: apirevproxy
