backbone-services/celery.yaml
---
# Source: celery/templates/service.yaml
# service.yaml---
apiVersion: v1
kind: Service
metadata:
  name: celery
  namespace: middleware
  annotations:
  labels:
    app: celery
spec:
  selector:
    app: celery
  ports:
  - name: http
    port: 5000
    targetPort: 5000
---
# Source: celery/templates/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery
  namespace: middleware
  labels:
    app: celery
spec:
  selector:
    matchLabels:
      app: celery
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  replicas: 1
  template:
    metadata:
      annotations:
        deployment-timestamp: "20220124130045"
      labels:
        app: celery
    spec:
      containers:
        - name: celery
          image: chub.cloud.gov.in/service-cloud/middleware:v010720210720
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
