backbone-services/console.yaml
---
# Source: console/templates/service.yaml
# service.yaml---
apiVersion: v1
kind: Service
metadata:
  name: console
  namespace: middleware
  annotations:
  labels:
    app: console
spec:
  selector:
    app: console
  ports:
  - name: http
    port: 80
    targetPort: 80
---
# Source: console/templates/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
  namespace: middleware
  labels:
    app: console
spec:
  selector:
    matchLabels:
      app: console
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  replicas: 1
  template:
    metadata:
      annotations:
        deployment-timestamp: "20220124125223"
      labels:
        app: console
    spec:
      containers:
        - name: console
          image: chub.cloud.gov.in/service-cloud/consoleproxy:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: console-conf
              mountPath:  /etc/nginx/conf.d/

          resources:
            requests:
              cpu: 100m
              memory: 256Mi

      volumes:
        - name: console-conf
          configMap:
            name: console-conf
