backbone-services/postgres.yaml
---
# Source: postgres/templates/service.yaml
# service.yaml---
apiVersion: v1
kind: Service
metadata:
  name: postgres-h
  namespace: middleware
  annotations:
  labels:
    app: postgres      
    group: db
spec:
  selector:
    app: postgres      
    group: db
  clusterIP: None
  ports:
  - name: http
    port: 5432
    targetPort: 5432
---
# Source: postgres/templates/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: middleware
  labels:
    app: postgres      
    group: db   
spec:
  selector:
    matchLabels:
      app: postgres      
      group: db
  strategy:
    rollingUpdate:
      maxUnavailable: 0     
  replicas: 1
  template:
    metadata:  
      annotations:
        deployment-timestamp: "20220124204614"        
      labels:
        app: postgres      
        group: db            
    spec:          
      containers:    
        - name: postgres
          image: chub.cloud.gov.in/service-cloud/postgres:middle
          imagePullPolicy: IfNotPresent             
          ports:
            - name: http
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /niccloud/postgresql
              name: data-pv
                         
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            
      volumes:
        - name: data-pv
          persistentVolumeClaim:
            claimName: data
---
# Source: postgres/templates/statefulset.yaml
# statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: middleware
  labels:
    app: postgres      
    group: db
spec:
  selector:
    matchLabels:
      app: postgres      
      group: db
  replicas: 1
  serviceName: postgres
  template:
    metadata:
      annotations:
        deployment-timestamp: "20220124204614"
      labels:
        app: postgres      
        group: db
    spec:
      containers:
        - name: postgres
          image: chub.cloud.gov.in/service-cloud/postgres:middle
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /niccloud/postgresql
              name: data-pv
            
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            
      volumes:
        - name: data-pv
          persistentVolumeClaim:
            claimName: data
