backbone-services/admin_front.yaml
---
# Source: admin/templates/service.yaml
# service.yaml---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: middleware  
  annotations: 
  labels:
    app: admin
spec:
  selector:
    app: admin
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: admin
  namespace: middleware
  labels:
    app.kubernetes.io/component: admin
    app.kubernetes.io/instance: admin
    app.kubernetes.io/name: admin
spec:
  tls:
    - hosts:
        - admin.cloud.gov.in
      secretName: sso
  rules:
    - host: admin.cloud.gov.in
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: admin
              servicePort: http
---
# Source: admin/templates/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: middleware
  labels:
    app: admin   
spec:
  selector:
    matchLabels:
      app: admin
  strategy:
    rollingUpdate:
      maxUnavailable: 0     
  replicas: 1
  template:
    metadata:  
      annotations:
        deployment-timestamp: "20220201114727"        
      labels:
        app: admin            
    spec:          
      containers:    
        - name: admin
          image: chub.cloud.gov.in/service-cloud-dev/admin_portal_sso:latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: frotnendnginx
              mountPath: /etc/nginx/conf.d
                         
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            
      volumes:
        - name: frotnendnginx
          configMap:
            name: frotnendnginx
