backbone-services/frontend.yaml
---
# Source: frontend/templates/service.yaml
# service.yaml---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: middleware
  annotations:
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 5000
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  namespace: middleware
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/name: frontend
spec:
  tls:
    - hosts:
        - portal.cloud.gov.in
      secretName: sso
  rules:
    - host: portal.cloud.gov.in
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: frontend
              servicePort: 5000
---
# Source: frontend/templates/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: middleware
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  replicas: 1
  template:
    metadata:
      annotations:
        deployment-timestamp: "20220120222144"
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: chub.cloud.gov.in/service-cloud-dev/frontend_sso:1.4
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: frotnendnginx
              mountPath: /etc/nginx/conf.d

          resources:
            requests:
              cpu: 100m
              memory: 256Mi

      volumes:
        - name: frotnendnginx
          configMap:
            name: frotnendnginx
