backbone-services/ingress_api.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
  namespace: middleware
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/instance: api
    app.kubernetes.io/name: api
spec:
  tls:
    - hosts:
        - serviceapi.cloud.gov.in
      secretName: sso
  rules:
    - host: serviceapi.cloud.gov.in
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: api
              servicePort: 5000
