backbone-services/socketio.yaml
---
# Source: socketio/templates/service.yaml
# service.yaml---
apiVersion: v1
kind: Service
metadata:
  name: socketio
  namespace: middleware
  annotations:
  labels:
    app: socketio
spec:
  selector:
    app: socketio
  ports:
  - name: http
    port: 5000
    targetPort: 5000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: socketio
  namespace: middleware
  labels:
    app.kubernetes.io/component: socketio
    app.kubernetes.io/instance: socketio
    app.kubernetes.io/name: socketio
  annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
   nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
   nginx.ingress.kubernetes.io/server-snippets: |
    location / {
     proxy_set_header Upgrade $http_upgrade;
     proxy_http_version 1.1;
     proxy_set_header X-Forwarded-Host $http_host;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-For $remote_addr;
     proxy_set_header Host $host;
     proxy_set_header Connection "upgrade";
     proxy_cache_bypass $http_upgrade;
     }
spec:
  tls:
    - hosts:
        - socketio.cloud.gov.in
      secretName: sso
  rules:
    - host: socketio.cloud.gov.in
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: socketio
              servicePort: 5000
---
# Source: socketio/templates/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socketio
  namespace: middleware
  labels:
    app: socketio   
spec:
  selector:
    matchLabels:
      app: socketio
  strategy:
    rollingUpdate:
      maxUnavailable: 0     
  replicas: 1
  template:
    metadata:  
      annotations:
        deployment-timestamp: "20220124174301"        
      labels:
        app: socketio            
    spec:          
      containers:    
        - name: socketio
          image: chub.cloud.gov.in/service-cloud-dev/socketio_sso:1.0
          imagePullPolicy: Always             
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP             
          resources:
---
# Source: socketio/templates/statefulset.yaml
# statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: socketio
  namespace: middleware
  labels:
    app: socketio
spec:
  selector:
    matchLabels:
      app: socketio
  replicas: 1
  serviceName: postgres-h
  template:
    metadata:
      annotations:
        deployment-timestamp: "20220124174301"
      labels:
        app: socketio
    spec:
      containers:
        - name: socketio
          image: chub.cloud.gov.in/service-cloud-dev/socketio_sso:1.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          volumeMounts:
          resources:
